Fixed responsive design on mobile landscape

--- a/src/assets/scss/components/mobile/index.scss
+++ b/src/assets/scss/components/mobile/index.scss
@@ -65,12 +65,13 @@
 		.ProjectList-content {
 			justify-content: center;
 			.Project {
-				font-size: 1em;
+				font-size: 0.8em;
 			}
 		}
 	}
 
 	.TagList {
+		font-size: 0.8em;
 		width: 100%;
 	}
 }
